# bevy_svg_map

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: msrv.yml
examples/: readme.rs
src/: lib.rs  lyon_utils.rs  style.rs
tests/: integration_test.rs
