[package]
name = "bevy_svg_map"
version = "0.1.1"
authors = ["carrascomj <carrascomurielj@gmail.com>"]
edition = "2018"
repository = "https://github.com/carrascomj/bevy_svg_map"
description = "Tool to load SVG to bevy, adding properties based on the style"
keywords = ["graphics", "gamedev", "bevy", "svg"]
categories = ["Graphics", "Game Engines"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svgtypes="0.5.0"
roxmltree="0.13.0"
lyon = {version="0.17.1", features=["svg"]}
# lyon = {version="0.16.2", features=["svg"]}
euclid = "0.22.1"

[dependencies.bevy]
# git = "https://github.com/bevyengine/bevy.git"
version="0.5"
default_features=false
features = ["render"]
